--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               }
             ],
             "styles": [
+              "node_modules/primeflex/primeflex.css",
               "src/styles.scss"
             ]
           },
